This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
5/5/25: Really fixed DE live mode and removed restriction on using 32-bit
version (In 4.1).

4/17/25: Fixed set a subdirectory for frames for DE camera, and fixed live
mode for API 2 (In 4.1).

4/15/25: Fixed Shift to Marker not being disabled with Navigator closed (In
4.1).

4/9/25: Stopped trying to set DE property for motion correction when it is
unavailable (In 4.1).

4/4/25: SEM_4-1-23
3/25/25: Fixed unneeded tracking on every tilt on backlashed side of
dose-symmetric series (In 4.1).

3/24/25: Fixed canceling out when defining tilt series over a range with Shift
T (In 4.1).

3/19/25: Set attribute to avoid contrast stretching in returned images from
DE camera with API 2 (In 4.1).

3/13/25: Fixed montages opened with SetupPolygonMontage becoming unusable
after closing the file (In 4.1).

3/11/25: Fixed loss of mag value indicating whether hex IS vectors were
transformed when reading in settings (In 4.1).

3/7/25: SEM_4-1-22
3/7/25: Allowed spaces between # and ScriptName or LongName in a Python script
(In 4.1).

3/7/25: Fixed using "print" in Python script with a % in the string (In 4.1).

3/6/25: Fixed problem with multi-hole combiner for hex pattern (In 4.1).

3/6/25: Fixed SEMCCD plugin to restart shrmemframe properly when using GPU
through it (In 4.1).

3/5/25: Fixed save and restore of read modes for camera parameter sets when
setting a state makes it go out of low dose (In 4.1).

3/5/25: Fixed display labeling linear CDS mode images as counted (In 4.1).

3/4/25: Fixed frame alignment when normalizing in SerialEM for cameras where
gain references normally are converted to integers (In 4.1).

3/2/25: Fixed runaway Realign to Item if stopped during initial mag change
(In 4.1).
