@@ -3,10 +3,14 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+5/5/25: SEM_4-1-24
+5/5/25: Allowed Wait for Drift task to be run at a subset of items in
+Navigator Acquire at Items (In 4.1).
+
 5/5/25: Really fixed DE live mode and removed restriction on using 32-bit
 version (In 4.1).
 
-4/17/25: Fixed set a subdirectory for frames for DE camera, and fixed live
+4/17/25: Fixed setting a subdirectory for frames for DE camera, and fixed live
 mode for API 2 (In 4.1).
 
 4/15/25: Fixed Shift to Marker not being disabled with Navigator closed (In
